# ulogger

./: .drone.yml  .gitignore  README.md  pyproject.toml
.gitea/workflows/: publish-pypi.yaml
.github/workflows/: ci.yml
src/ulogger/: __init__.py  capture.py  core.py  session.py  sls.py
tests/: test_capture.py  test_core.py  test_session.py  test_sls.py
